test/expected/explain_tdenw4.out
explain T x : 4
        ^
9: error: enum bit-fields not supported in C
